...
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/item_meeting_picture_room"
        app:layout_constraintTop_toBottomOf="@id/item_meeting_object_of_meeting"
        tools:text="leo@lamzone.com" />

    <ImageButton
        android:id="@+id/item_meeting_delete_room_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:src="@drawable/ic_delete_black_24"
        app:layout_constraintBottom_toBottomOf="@+id/item_meeting_participants"
...
